package org.fhtw.mytourapi.dto;

public enum TransportType {
    BIKE,
    HIKE,
    RUNNING,
    VACATION
}
